--- a/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
@@ -9,8 +9,8 @@
   justify-content: space-between;
   justify-self: center;
 
-  width: 1000px;
-  /* max-width: 1000px; */
+  min-width: 1000px;
+  max-width: 1000px;
 }
 
 .inputs {
